# slm-payequity

./: .gitignore  README.md  finetune_peft_phi.py  merge_training_data.py  modeling_phi3_fixed.py  pyproject.toml  rag_baseline.py  requirements.txt  run_ablation.py  salary_data_2009.csv  tc2_narrator.py  tc3_checker.py  train_n20.jsonl  train_n40.jsonl  train_n60.jsonl  training_data.jsonl  training_tc1_1.jsonl  training_tc1_3.jsonl  training_tc2_1.jsonl  training_tc2_3.jsonl  training_tc3_1.jsonl  training_tc3_2.jsonl
config/: llama31_8b.json  mistral7b.json  phi35_mini.json
data/raw/: test.jsonl  training_tc1_2.jsonl  training_tc2_2.jsonl  training_tc3_3.jsonl
drafts/: create_subsets.py  evaluate_peft (Mistral).py  finetune.py  finetune_peft (Llama).py  main.py  pay_equity_pipeline.py  rag_baseline (Llama).py  run_ablation_eval.py  tc1_extractor.py
eval_results/ablation/llama-n20/: results.json
eval_results/mistral-7b/: results.json
eval_results/phi-3.5-mini/: results.json
eval_results/rag/llama3.1-8b/: results.json
eval_results/rag/mistral-7b/: results.json
eval_results/rag/phi-3.5-mini/: results.json
reports/results/: ablation_summary.json
reports/results/eval_results/ablation/llama-n40/: results.json
reports/results/eval_results/ablation/llama-n60/: results.json
reports/results/eval_results/llama3.1-8b/: results.json
src/: evaluate.py  finetune.py  rag_baseline.py
