[project]
name = "pay-equity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.2",
    "faiss-cpu>=1.8.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=2.7.0",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.4.4",
]
